[package]
name = "supasim-spirv-cross-sys"
edition = "2024"
resolver = "3"
version = "0.0.2"
description = "Very simple SpirV-Cross bindings as used by supasim. No other utilities or helpers are provided."
license = "MIT"
repository = "https://github.com/supasim/spirv-cross-sys"
readme = "README.md"
homepage = "https://supasim.github.io/"

[dependencies]

[build-dependencies]
bindgen = "0.72"
